added basic styling and deleting cookie from computer

--- a/TermProject/TermProjectSolution/TermProjectSolution/TermProjectSolution.csproj
+++ b/TermProject/TermProjectSolution/TermProjectSolution/TermProjectSolution.csproj
@@ -68,6 +68,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Login.aspx" />
+    <Content Include="loginStyles.css" />
     <Content Include="Registration.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
